--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.16.0",
     "@babel/plugin-proposal-optional-chaining": "7.16.0",
     "babel-loader": "8.2.3",
-    "dayjs": "1.10.7",
     "eslint": "7.32.0",
     "eslint-config-htmlacademy": "5.0.0",
     "webpack": "5.62.1",
@@ -27,6 +26,7 @@
     "node": "16"
   },
   "dependencies": {
-    "nanoid": "^3.1.30"
+    "nanoid": "^3.1.30",
+    "dayjs": "1.10.7"
   }
 }
