--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node": "16"
   },
   "dependencies": {
-    "nanoid": "^3.1.30",
-    "dayjs": "1.10.7"
+    "nanoid": "3.1.30",
+    "dayjs": "1.10.7",
+    "he": "1.2.0"
   }
 }
